--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
         </section>
     </main>
     <footer>
-        <p>Projeto desenvolvido pela alura, sem fins lucrativos</p>
+        <p>Projeto desenvolvido por yara e camila
+    
+        </p>
     </footer>
     <script src="app.js"></script>
     <acript src="perguntas.js"></script>
