--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, inditial-scale=1.0">
-  <link rel="stylesheet" href="style.csss"> 
+  <link rel="stylesheet" href="style (1).css"> 
   <title>Flashcard</title>
 </head>
 <body>
